--- a/week1Project/ecdsa-node-main/client/src/App.scss
+++ b/week1Project/ecdsa-node-main/client/src/App.scss
@@ -23,13 +23,14 @@ label {
 }
 
 .container {
-  flex-grow: 1;
+  width: 100%;
   margin: 0 20px;
   background-color: #fff;
   border: 1px solid #cbd5e0;
   box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
   border-radius: 0.375rem;
   padding: 40px;
+  height: auto;
 
   label {
     margin: 10px 0;
@@ -67,6 +68,7 @@ input {
 .wallet {
   display: flex;
   flex-direction: column;
+  width: 40%;
 
   .balance {
     text-transform: uppercase;
@@ -83,4 +85,30 @@ input {
 .transfer {
   display: flex;
   flex-direction: column;
+}
+
+.transaction-container {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  background-color: whitesmoke;
+  padding: 20px;
+  width: 75%;
+  margin-left: 20px;
+  margin-bottom: 40px;
+}
+
+.transaction-history {
+  max-height: 450px;
+  overflow-y: auto;
+  width: 46%;
+  padding: 0.75rem;
+  font-size: 1em;
+  border-radius: 0.375rem;
+  background-color: #fff;
+  margin: 20px;
+  box-sizing: border-box;
+  border: 1px solid #cbd5e0;
+  box-shadow: 0 1px 2px 0 rgb(0 0 0 / 5%);
+  border-radius: 0.375rem;
 }
