--- a/wekk5Project-EscrowApp/app/src/styles/App.css
+++ b/wekk5Project-EscrowApp/app/src/styles/App.css
@@ -3,6 +3,7 @@ html, body {
     padding: 0;
     margin: 0;
     overflow-x: hidden;
+    color: #201335
 }
 
 #root {
@@ -12,5 +13,5 @@ html, body {
 .page-wrapper {
     display: flex;
     flex: 1;
-    background-color: lightslategray;
+    background-color: #201335;
 }
